--- a/Projekt/Projekt/Views/Shared/_Layout.cshtml
+++ b/Projekt/Projekt/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Zaloguj się</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Użytkownicy</a>
                         </li>
                        
                     </ul>
