--- a/Projekt/Projekt/Views/User/UserList.cshtml
+++ b/Projekt/Projekt/Views/User/UserList.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<Projekt.Models.User>
+﻿@model IQueryable<Projekt.Models.User>
 @*
 
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<h1>Ilość użytkowników: @Model.Count</h1>
+<!--<h1>Ilość użytkowników: małpa Model . Count</h1>-->
 
 <table>
     <tr>
@@ -19,7 +19,7 @@
         {
             <tr>
                 <td>
-                    @user.UID
+                    @user.id
                 </td>
                 <td style="padding-left: 100px">
                     @user.Login
@@ -29,16 +29,16 @@
                 </td>
                 <td style="padding-left: 100px">
                     <a class="btn btn-dark" asp-controller="User" asp-action="Edit"
-                       asp-route-Id=@user.UID>Edytuj</a>
+                       asp-route-Id=@user.id>Edytuj</a>
                 </td>
                 <td style="padding-left: 15px">
                     <a class="btn btn-danger" asp-controller="User" asp-action="Delete"
-                       asp-route-ID=@user.UID>Usuń</a>
+                       asp-route-User=@user.id>Usuń</a>
                 </td>
             </tr>
         }
     </tbody>
-    
+
 </table>
 <br />
 <a class="btn btn-primary" asp-controller="User" asp-action="Add">Utwórz konto</a>
