To do something

--- a/Projekt/Projekt/Views/Shared/HomePage.cshtml
+++ b/Projekt/Projekt/Views/Shared/HomePage.cshtml
@@ -1,11 +1,11 @@
-﻿<!--<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Pin a photo</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    
+    <link rel="stylesheet" href="~/css/HomePage.css" />
 </head>
 <body>
     <header>
@@ -28,6 +28,7 @@
             </div>
         </nav>
     </header>
+    
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -38,4 +39,4 @@
 
 
 </body>
-</html>-->
+</html>
