CRUD USER / IMAGE
Działa CRUD dla Usera i Image

--- a/PinAPhoto/PinAPhoto/Views/Image/ImageList.cshtml
+++ b/PinAPhoto/PinAPhoto/Views/Image/ImageList.cshtml
@@ -1,9 +1,10 @@
-﻿
+﻿@model IQueryable<PinAPhoto.Models.Image>
 <h1>Uploaded images</h1>
 <table class="table">
     <tr>
+        <th>Image ID</th>
         <th>Title</th>
-        <th>Date</th>
+        @*<th>Date</th>*@
         <th>Image</th>
         <th>Description</th>
         <th>Options</th>
@@ -13,22 +14,26 @@
         {
             <tr>
                 <td>
-                    @image.Title
+                    @image.id
                 </td>
                 <td>
-                    @image.UploadDate
+                    @image.Title
                 </td>
+                @*<td>
+                    @image.UploadDate
+                </td>*@
                 <td>
                     @image.ImageData
                 </td>
-                <td>                  
+                <td>
                     @image.Description
                 </td>
                 <td>
-                    <a class="btn btn-danger" asp-controller="Image" asp-action="DeleteImage" asp-route-Id="@image.GID">Usun</a>
-                    <a class="btn btn-primary" asp-controller="Image" asp-action="EditForm" asp-route-Id="@image.GID">Edytuj</a>
+                    <a class="btn btn-danger" asp-controller="Image" asp-action="DeleteImage" asp-route-Id="@image.id">Delete</a>
+                    <a class="btn btn-primary" asp-controller="Image" asp-action="EditForm" asp-route-Id="@image.id">Edit</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<a class="btn btn-primary" asp-controller="Image" asp-action="AddForm">Upload image</a>
