--- a/PinAPhoto/PinAPhoto/Views/Image/EditForm.cshtml
+++ b/PinAPhoto/PinAPhoto/Views/Image/EditForm.cshtml
@@ -3,12 +3,10 @@
 *@
 @model PinAPhoto.Models.Image
 @{
-    ViewBag.Title = "Title";
-    ViewBag.ImageData = "ImageData";
-    ViewBag.Description = "Description";
-    ViewBag.GID = "GID";
+   
+    ViewBag.id = "id";
 }
-<form asp-action="EditImage" method="post" asp-route-Id="@Model.GID">
+<form asp-action="EditImage" method="post" asp-route-Id="@Model.id">
     <input class="form-control" type="text" placeholder="Title" asp-for="Title" />
     <span asp-validation-for="Title" class="text-danger"></span>
     <br />
@@ -18,5 +16,5 @@
     <input class="form-control" type="text" asp-for="ImageData" readonly="readonly" />
     <span asp-validation-for="ImageData" class="text-danger"></span>
     <br />
-    <button class="btn btn-success" type="submit">Upload image</button>
+    <button class="btn btn-success" type="submit">Save changes</button>
 </form>
